--- a/src/styles/categorymenu.css
+++ b/src/styles/categorymenu.css
@@ -1,3 +1,4 @@
+
 .menu-items{
 	width:100%;
 	list-style:none;
@@ -55,7 +56,9 @@ font-size:1rem;
 	display:none;
 }
 @media (max-width: 768px) {
-   
+   .menu{
+	overflow:auto;
+}
    .cross{
    	display:block;
    	cursor:pointer;
