--- a/src/styles/categoryheader.css
+++ b/src/styles/categoryheader.css
@@ -1,23 +1,78 @@
 .category-header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 	background:#A81838;
 	width:100%;
-	height:8vh;
+	height:3rem;
 }
 .category-header-contents{
+  width:100%;
 	height:100%;
 	display:flex;
 	justify-content:space-around;
     align-items:center;
 }
+
 .category-name{
 	color:white;
-	height:100%;
 	cursor:pointer;
-	
-	padding:1rem 2rem;
 
 }
 .category-name:hover{
-  background:rgba(0,0,0,.1);
+  border-bottom:2px solid white;
 	
+}
+.category-header-home,.category-header-search{
+	color:white;
+	font-size:1.5rem;
+	cursor:pointer;
+  margin:0 1rem;
+}
+.category-header-fixed{
+color:white;
+font-size:1rem;
+cursor:pointer;
+ margin:0 1rem;
+}
+.dropdown{
+  display:none;
+}
+.dropbtn {
+  background-color: transparent;
+  color: white;
+  padding:1rem 0;
+  font-size: 1rem;
+  border: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #eee;
+  min-width: 160px;
+  z-index: 1;
+}
+
+
+.dropdown-content div {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content div:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+@media (max-width: 768px) {
+  .category-header-contents{
+    display:none;
+  }
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
 }
