dummy article data

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -14,7 +14,7 @@
 	display:flex;
     width:80%;
     justify-content:center;
-    align-items:center;
+    align-items:flex-start;
 }
 .footer-about{
 	width:40%;
